# docs/swagger.json
@@ -778,6 +778,10 @@
                 "slbname": {
                     "description": "主机名,支持通配符",
                     "type": "string"
+                },
+                "with_listener": {
+                    "description": "是否返回监听端口列表，默认false",
+                    "type": "boolean"
                 }
             }
         },
